Fix: Invert filament runout sensor logic (Set to HIGH)

--- a/Marlin/config.ini
+++ b/Marlin/config.ini
@@ -316,9 +316,10 @@ z_max_pos = 210
 filament_runout_sensor = on
 fil_runout_enabled_default = true
 num_runout_sensors = 1
-fil_runout_state = LOW
+fil_runout_state = HIGH
 fil_runout_pullup = on
 filament_runout_script = "M600"
+advanced_pause_feature = on
 
 #===========================================================================
 #============================= Software Endstops ===========================
