Update Klipper configs: Fix Z Probe, Axis Directions, Input Shaper, Start Macros

--- a/Old M Config/config.ini
+++ b/Old M Config/config.ini
@@ -125,7 +125,7 @@ default_ki = 1.08
 default_kd = 114.00
 
 # Bed PID (disabled, using bang-bang)
-# pidtempbed = off
+#pidtempbed = off
 
 # PID Functional Range
 pid_functional_range = 20
@@ -270,6 +270,11 @@ z_probe_low_point = -2
 #===========================================================================
 #============================= Stepper Drivers =============================
 #===========================================================================
+
+# DRV8825 timing fix (Required for reliable operation)
+minimum_stepper_pulse = 2
+maximum_stepper_rate = 250000
+adaptive_step_smoothing = on
 
 # Enable Pin States
 x_enable_on = LOW
