--- a/klipper cfg/ramps_klipper.cfg
+++ b/klipper cfg/ramps_klipper.cfg
@@ -2,6 +2,8 @@
 # Migrated from Marlin config.ini
 # User: Mdluex i3
 
+[include mainsail.cfg]
+
 [stepper_x]
 step_pin: PF0
 dir_pin: PF1
@@ -12,11 +14,12 @@ rotation_distance: 32.312
 endstop_pin: ^!PE5  # Min Endstop (Logic: Triggered on Low -> ^!)
 position_endstop: 0
 position_max: 230   # Bed Size X
+position_min: -2
 homing_speed: 50
 
 [stepper_y]
 step_pin: PF6
-dir_pin: !PF7
+dir_pin: PF7
 enable_pin: !PF2
 microsteps: 32
 # Calculated from Marlin 76.63 steps/mm: (200 * 32) / 76.63
@@ -24,25 +27,26 @@ rotation_distance: 83.518
 endstop_pin: ^!PJ1  # Min Endstop (Logic: Triggered on Low -> ^!)
 position_endstop: 0
 position_max: 210   # Bed Size Y
+position_min: -2
 homing_speed: 50
 
 [stepper_z]
 step_pin: PL3
-dir_pin: PL1
+dir_pin: !PL1
 enable_pin: !PK0
 microsteps: 32
 # Calculated from Marlin 783.69 steps/mm: (200 * 32) / 783.69
 rotation_distance: 8.166 
 # Z Min Pin (Using D18 as per Marlin z_min_pin=18)
 # D18 on RAMPS is PD3
-endstop_pin: ^!PD3  
+endstop_pin: probe:z_virtual_endstop
 # position_endstop: 0.5 # Disable if using probe:z_virtual_endstop
 position_max: 210
 position_min: -5
 
 [extruder]
 step_pin: PA4
-dir_pin: PA6
+dir_pin: !PA6
 enable_pin: !PA2
 microsteps: 32
 # Calculated from Marlin 200 steps/mm: (200 * 32) / 200
@@ -71,7 +75,7 @@ max_temp: 150 # Marlin bed_maxtemp
 pin: PH6
 
 [mcu]
-serial: /dev/ttyACM0
+serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 
 [printer]
 kinematics: cartesian
@@ -84,16 +88,24 @@ max_z_accel: 100
 # Probe & Homing Overrides
 #####################################################################
 
-[bltouch]
+#[bltouch]
 # Only enable if you have a BLTouch.
 # Since Marlin had "Z_MIN_PROBE_USES_Z_MIN_ENDSTOP_PIN", check your wiring.
 # If using a physical switch probe, use [probe] instead.
 # Given config: "fix_mounted_probe = on" -> Inductive/Capacitive/Switch probe?
-sensor_pin: ^PD3 # Z Min pin
-control_pin: PB5 # Servo 0 pin on RAMPS usually. Check wiring!
+#sensor_pin: ^PD3 # Z Min pin
+#control_pin: PB5 # Servo 0 pin on RAMPS usually. Check wiring!
+#x_offset: 30
+#y_offset: 10
+#z_offset: 4.03
+
+[probe]
+pin: ^!PD3 # Z Min pin (Reverted to ^!PD3)
 x_offset: 30
 y_offset: 10
-z_offset: 4.03
+z_offset: 4.11
+speed: 5.0
+samples: 2
 
 # Safe Homing
 [safe_z_home]
@@ -104,10 +116,114 @@ z_hop_speed: 5
 
 [bed_mesh]
 speed: 120
-horizontal_move_z: 5
+horizontal_move_z: 10
 mesh_min: 30, 30
 mesh_max: 200, 180
 probe_count: 3, 3
+
+[gcode_macro G29]
+description: Auto Bed Leveling
+gcode:
+  G28
+  BED_MESH_CALIBRATE
+  G0 X0 Y0 Z10 F6000
+
+[gcode_macro START_PRINT]
+gcode:
+    # 1. Capture variables from Slicer
+    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+
+    # 2. Safety and Setup
+    G90 ; Absolute coordinates
+    M83 ; Extruder relative mode
+    M220 S100 ; Reset Speed factor
+    M221 S95 ; Flow calibration (From your old code)
+
+    # 3. Start Heating (Two-stage)
+    M117 Preheating...
+    M140 S{BED_TEMP} ; Set bed temp
+    M104 S170 ; Preheat nozzle to 170 (no oozing)
+
+    # 4. Homing
+    M117 Homing...
+    # Note: Klipper handles safe accel automatically in config, no need for M204 here
+    G28 ; Home all
+
+    # 5. Wait for Bed Temp before Mesh
+    M117 Heating Bed...
+    M190 S{BED_TEMP}
+
+    # 6. Bed Leveling
+    M117 Meshing...
+    BED_MESH_CALIBRATE ; Equivalent to G29
+
+    # 7. Final Heating
+    G1 Y-2 X179 F2400 ; Move to wait position
+    G1 Z3 F720
+    M117 Heating Nozzle...
+    M109 S{EXTRUDER_TEMP} ; Wait for final print temp
+
+    # 8. Intro Line (Exact copy of your geometry)
+    M117 Purging...
+    G1 X170 F1000
+    G1 Z0.2 F720
+    G1 X110 E8 F900
+    G1 X40 E10 F700
+    G92 E0
+
+    M117 Printing...
+
+[gcode_macro G9111]
+gcode:
+  # Ignore unknown command
+
+[gcode_macro M204]
+rename_existing: M204.1
+gcode:
+  {% set f = params.F|default(0.5)|float %}
+  {% if 'S' in params %}
+    {% set s = params.S|float %}
+    SET_VELOCITY_LIMIT ACCEL={s} ACCEL_TO_DECEL={ s * f }
+  {% endif %}
+  {% if 'P' in params %}
+    {% set p = params.P|float %}
+    {% if 'T' in params %}
+      {% set t = params.T|float %}
+      {% if p < t %}
+        SET_VELOCITY_LIMIT ACCEL={p} ACCEL_TO_DECEL={ p * f }
+      {% else %}
+        SET_VELOCITY_LIMIT ACCEL={t} ACCEL_TO_DECEL={ t * f }
+      {% endif %}
+    {% else %}
+      SET_VELOCITY_LIMIT ACCEL={p} ACCEL_TO_DECEL={ p * f }
+    {% endif %}
+  {% endif %}
+
+[gcode_macro M201]
+gcode:
+  # Ignore max accel limits from slicer
+
+[gcode_macro M203]
+gcode:
+  # Ignore max feedrate limits
+
+[gcode_macro M205]
+gcode:
+  # Ignore jerk limits
+
+[gcode_macro M92]
+gcode:
+  # Ignore steps/mm
+
+[gcode_macro M500]
+gcode:
+  # Ignore save to EEPROM
+
+[input_shaper]
+shaper_freq_x: 35
+shaper_freq_y: 35
+shaper_type: mzv
 
 [screws_tilt_adjust]
 # Assisted Tramming / Bed Screws
