Update Klipper configs: Enable Beeper (Non-PWM) & Filament Runout Sensor

--- a/klipper cfg/ramps_klipper.cfg
+++ b/klipper cfg/ramps_klipper.cfg
@@ -121,7 +121,7 @@ mesh_min: 30, 30
 mesh_max: 200, 180
 probe_count: 3, 3
 
-[gcode_macro G29]
+[gcode_macro Auto_Bed_Leveling]
 description: Auto Bed Leveling
 gcode:
   G28
@@ -174,10 +174,6 @@ gcode:
 
     M117 Printing...
 
-[gcode_macro G9111]
-gcode:
-  # Ignore unknown command
-
 [gcode_macro M204]
 rename_existing: M204.1
 gcode:
@@ -200,29 +196,9 @@ gcode:
     {% endif %}
   {% endif %}
 
-[gcode_macro M201]
-gcode:
-  # Ignore max accel limits from slicer
-
-[gcode_macro M203]
-gcode:
-  # Ignore max feedrate limits
-
-[gcode_macro M205]
-gcode:
-  # Ignore jerk limits
-
-[gcode_macro M92]
-gcode:
-  # Ignore steps/mm
-
-[gcode_macro M500]
-gcode:
-  # Ignore save to EEPROM
-
 [input_shaper]
-shaper_freq_x: 35
-shaper_freq_y: 35
+shaper_freq_x: 45
+shaper_freq_y: 90
 shaper_type: mzv
 
 [screws_tilt_adjust]
@@ -255,8 +231,29 @@ encoder_pins: ^EXP2_3, ^EXP2_5
 click_pin: ^!EXP1_2
 #kill_pin: ^!EXP2_8
 
+[filament_switch_sensor runout_sensor]
+switch_pin: ^!PG5  # Pin D4 on RAMPS (Inverted). Check wiring!
+pause_on_runout: True
+runout_gcode:
+    M117 Filament Runout!
+    PAUSE
+insert_gcode:
+    M117 Filament Inserted
+    RESUME
+
 [output_pin beeper]
 pin: EXP1_1
+pwm: False
+value: 0
+shutdown_value: 0
+
+[gcode_macro M300]
+gcode:
+    # Use a 10ms duration is P is omitted.
+    {% set P = params.P|default(100)|int %}
+    SET_PIN PIN=beeper VALUE=1
+    G4 P{P}
+    SET_PIN PIN=beeper VALUE=0
 
 [board_pins]
 aliases:
