--- a/klipper cfg/octopus_klipper.cfg
+++ b/klipper cfg/octopus_klipper.cfg
@@ -9,10 +9,10 @@ step_pin: PF13
 dir_pin: PF12
 enable_pin: !PF14
 microsteps: 32
-rotation_distance: 32.312
+rotation_distance: 32
 endstop_pin: ^!PG6 # Triggered on Low
 position_endstop: 0
-position_max: 230
+position_max: 225
 position_min: -2
 homing_speed: 50
 
@@ -21,7 +21,7 @@ step_pin: PG0
 dir_pin: PG1
 enable_pin: !PF15
 microsteps: 32
-rotation_distance: 83.518
+rotation_distance: 80
 endstop_pin: ^!PG9 # Triggered on Low
 position_endstop: 0
 position_max: 210
@@ -33,7 +33,7 @@ step_pin: PF11
 dir_pin: !PG3
 enable_pin: !PG5
 microsteps: 32
-rotation_distance: 8.166
+rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 # position_endstop: 0.5 
 position_max: 210
@@ -44,7 +44,7 @@ step_pin: PF9
 dir_pin: !PF10
 enable_pin: !PG2
 microsteps: 32
-rotation_distance: 32.0
+rotation_distance: 32
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PA2 # HE0
@@ -94,7 +94,7 @@ max_z_accel: 100
 pin: ^!PG10 # Z Min pin (Reverted to ^!PG10)
 x_offset: 30
 y_offset: 10
-z_offset: 4.11
+z_offset: 4.15
 speed: 5.0
 samples: 2
 
@@ -186,9 +186,11 @@ gcode:
   {% endif %}
 
 [input_shaper]
-shaper_freq_x: 45
-shaper_freq_y: 90
+shaper_freq_x: 35
+shaper_freq_y: 35
 shaper_type: mzv
+damping_ratio_x: 0.15
+damping_ratio_y: 0.15
 
 [screws_tilt_adjust]
 screw1: 30, 30
