--- a/klipper cfg/ramps_klipper.cfg
+++ b/klipper cfg/ramps_klipper.cfg
@@ -10,10 +10,10 @@ dir_pin: PF1
 enable_pin: !PD7
 microsteps: 32
 # Calculated from Marlin 198.07 steps/mm: (200 * 32) / 198.07
-rotation_distance: 32.312 
+rotation_distance: 32
 endstop_pin: ^!PE5  # Min Endstop (Logic: Triggered on Low -> ^!)
 position_endstop: 0
-position_max: 230   # Bed Size X
+position_max: 225   # Bed Size X
 position_min: -2
 homing_speed: 50
 
@@ -23,7 +23,7 @@ dir_pin: PF7
 enable_pin: !PF2
 microsteps: 32
 # Calculated from Marlin 76.63 steps/mm: (200 * 32) / 76.63
-rotation_distance: 83.518 
+rotation_distance: 80
 endstop_pin: ^!PJ1  # Min Endstop (Logic: Triggered on Low -> ^!)
 position_endstop: 0
 position_max: 210   # Bed Size Y
@@ -36,7 +36,7 @@ dir_pin: !PL1
 enable_pin: !PK0
 microsteps: 32
 # Calculated from Marlin 783.69 steps/mm: (200 * 32) / 783.69
-rotation_distance: 8.166 
+rotation_distance: 8
 # Z Min Pin (Using D18 as per Marlin z_min_pin=18)
 # D18 on RAMPS is PD3
 endstop_pin: probe:z_virtual_endstop
@@ -50,7 +50,7 @@ dir_pin: !PA6
 enable_pin: !PA2
 microsteps: 32
 # Calculated from Marlin 200 steps/mm: (200 * 32) / 200
-rotation_distance: 32.0 
+rotation_distance: 32
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB4
@@ -103,7 +103,7 @@ max_z_accel: 100
 pin: ^!PD3 # Z Min pin (Reverted to ^!PD3)
 x_offset: 30
 y_offset: 10
-z_offset: 4.11
+z_offset: 4.1
 speed: 5.0
 samples: 2
 
@@ -197,9 +197,11 @@ gcode:
   {% endif %}
 
 [input_shaper]
-shaper_freq_x: 45
-shaper_freq_y: 90
+shaper_freq_x: 35
+shaper_freq_y: 35
 shaper_type: mzv
+damping_ratio_x: 0.15
+damping_ratio_y: 0.15
 
 [screws_tilt_adjust]
 # Assisted Tramming / Bed Screws
