Fix CANCEL/PAUSE crash: Add safe macros (park at X10 Y200)

--- a/Klipper/klipper cfg/octopus_klipper.cfg
+++ b/Klipper/klipper cfg/octopus_klipper.cfg
@@ -1,6 +1,14 @@
 # Klipper Configuration for BigTreeTech Octopus v1.1
 # Migrated from Marlin config.ini
-# User: Mdluex i3
+# User: Mdluex
+
+# To use this config, start by identifying the micro-controller on the
+# board - it may be an STM32F446, or STM32F429.  Select the
+# appropriate micro-controller in "make menuconfig" and select "Enable
+# low-level configuration options". For STM32F446 boards the firmware
+# should be compiled with a "32KiB bootloader" and a "12MHz crystal"
+# clock reference. For STM32F429 boards use a "32KiB bootloader" and
+# an "8MHz crystal".
 
 [include mainsail.cfg]
 
@@ -14,7 +22,7 @@ endstop_pin: ^!PG6 # Triggered on Low
 position_endstop: 0
 position_max: 230
 position_min: -2
-homing_speed: 50
+homing_speed: 100
 
 [stepper_y]
 step_pin: PG0
@@ -26,7 +34,7 @@ endstop_pin: ^!PG9 # Triggered on Low
 position_endstop: 0
 position_max: 210
 position_min: -2
-homing_speed: 50
+homing_speed: 100
 
 [stepper_z]
 step_pin: PF11
@@ -94,7 +102,7 @@ max_z_accel: 100
 pin: ^!PG10 # Z Min pin (Reverted to ^!PG10)
 x_offset: 30
 y_offset: 10
-z_offset: 4.15
+z_offset: 3.95
 speed: 5.0
 samples: 2
 
@@ -104,11 +112,11 @@ speed: 50
 z_hop: 10
 
 [bed_mesh]
-speed: 120
+speed: 150
 horizontal_move_z: 10
 mesh_min: 30, 30
-mesh_max: 200, 180
-probe_count: 3, 3
+mesh_max: 215, 200
+probe_count: 4, 4
 
 [gcode_macro Auto_Bed_Leveling]
 description: Auto Bed Leveling
@@ -162,6 +170,101 @@ gcode:
     G92 E0
 
     M117 Printing...
+
+[gcode_macro END_PRINT]
+description: End print routine - safe park and cool down
+gcode:
+    # Turn off heaters
+    M104 S0 ; Turn off extruder
+    M140 S0 ; Turn off bed
+    
+    # Retract filament
+    G91 ; Relative positioning
+    G1 E-5 F300 ; Retract 5mm
+    
+    # Safe Z hop
+    G1 Z10 F3000 ; Move Z up 10mm
+    
+    # Park at front-left corner (safe position)
+    G90 ; Absolute positioning
+    G1 X10 Y200 F6000 ; Move to front-left, Y forward for part removal
+    
+    # Disable steppers (except Z for bed support)
+    M84 X Y E ; Disable X, Y, E steppers
+    
+    M117 Print Complete!
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the running print - safe park
+rename_existing: BASE_CANCEL_PRINT
+gcode:
+    # Turn off heaters
+    M104 S0 ; Turn off extruder
+    M140 S0 ; Turn off bed
+    
+    # Retract filament to prevent oozing
+    G91 ; Relative positioning
+    G1 E-5 F300 ; Retract 5mm
+    
+    # Safe Z hop (check if Z is homed first)
+    {% if printer.toolhead.homed_axes == "xyz" %}
+        G1 Z10 F3000 ; Move Z up 10mm
+        G90 ; Absolute positioning
+        G1 X10 Y200 F6000 ; Park at front-left corner
+    {% else %}
+        G90 ; Absolute positioning - don't move if not homed
+    {% endif %}
+    
+    # Turn off fan
+    M106 S0
+    
+    # Disable steppers
+    M84 X Y E
+    
+    # Clear bed mesh
+    BED_MESH_CLEAR
+    
+    M117 Print Cancelled
+    
+    # Call the base cancel (from mainsail.cfg)
+    BASE_CANCEL_PRINT
+
+[gcode_macro PAUSE]
+description: Pause the running print - safe park
+rename_existing: BASE_PAUSE
+gcode:
+    # Save current state
+    SAVE_GCODE_STATE NAME=PAUSE_state
+    
+    # Call base pause first
+    BASE_PAUSE
+    
+    # Retract filament to prevent oozing
+    G91 ; Relative positioning
+    G1 E-5 F300 ; Retract 5mm
+    
+    # Safe Z hop and park
+    G1 Z10 F3000 ; Move Z up 10mm
+    G90 ; Absolute positioning
+    G1 X10 Y200 F6000 ; Park at front-left corner
+    
+    M117 Print Paused
+
+[gcode_macro RESUME]
+description: Resume the paused print
+rename_existing: BASE_RESUME
+gcode:
+    # Prime nozzle
+    G91 ; Relative positioning
+    G1 E5 F300 ; Un-retract 5mm
+    G90 ; Absolute positioning
+    
+    # Restore state and resume
+    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1 MOVE_SPEED=100
+    
+    M117 Printing...
+    
+    BASE_RESUME
 
 [gcode_macro M204]
 rename_existing: M204.1
