--- a/Klipper/klipper cfg/ramps_klipper.cfg
+++ b/Klipper/klipper cfg/ramps_klipper.cfg
@@ -11,34 +11,37 @@
 step_pin: PF0
 dir_pin: PF1
 enable_pin: !PD7
-microsteps: 32
-# Calculated from Marlin 198.07 steps/mm: (200 * 32) / 198.07
+microsteps: 16
+step_pulse_duration: 0.000002
+# Calculated from Marlin 198.07 steps/mm: (200 * 16) / 198.07
 rotation_distance: 32
 endstop_pin: ^!PE5  # Min Endstop (Logic: Triggered on Low -> ^!)
 position_endstop: 0
 position_max: 230   # Bed Size X
 position_min: -2
-homing_speed: 100
+homing_speed: 90
 
 [stepper_y]
 step_pin: PF6
 dir_pin: PF7
 enable_pin: !PF2
-microsteps: 32
-# Calculated from Marlin 76.63 steps/mm: (200 * 32) / 76.63
+microsteps: 16
+step_pulse_duration: 0.000002
+# Calculated from Marlin 76.63 steps/mm: (200 * 16) / 76.63
 rotation_distance: 80
 endstop_pin: ^!PJ1  # Min Endstop (Logic: Triggered on Low -> ^!)
 position_endstop: 0
 position_max: 210   # Bed Size Y
 position_min: -2
-homing_speed: 100
+homing_speed: 90
 
 [stepper_z]
 step_pin: PL3
 dir_pin: !PL1
 enable_pin: !PK0
-microsteps: 32
-# Calculated from Marlin 783.69 steps/mm: (200 * 32) / 783.69
+microsteps: 16
+step_pulse_duration: 0.000002
+# Calculated from Marlin 783.69 steps/mm: (200 * 16) / 783.69
 rotation_distance: 8
 # Z Min Pin (Using D18 as per Marlin z_min_pin=18)
 # D18 on RAMPS is PD3
@@ -51,8 +54,9 @@ position_min: -5
 step_pin: PA4
 dir_pin: !PA6
 enable_pin: !PA2
-microsteps: 32
-# Calculated from Marlin 200 steps/mm: (200 * 32) / 200
+microsteps: 16
+step_pulse_duration: 0.000002
+# Calculated from Marlin 200 steps/mm: (200 * 16) / 200
 rotation_distance: 32
 nozzle_diameter: 0.400
 filament_diameter: 1.750
@@ -107,13 +111,13 @@ pin: ^!PD3 # Z Min pin (Reverted to ^!PD3)
 x_offset: 30
 y_offset: 10
 z_offset: 3.95
-speed: 5.0
+speed: 9.0
 samples: 2
 
 # Safe Homing
 [safe_z_home]
 home_xy_position: 115, 105 # Center of Bed (230/2, 210/2)
-speed: 50
+speed: 90
 z_hop: 10
 z_hop_speed: 5
 
